<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.oleynik.qa.workshop</groupId>
    <artifactId>testng-examples</artifactId>
    <version>2.0-SNAPSHOT</version>
    <name>TestNG 7 workshop examples</name>

    <properties>
        <java.version>17</java.version>
        <testng.version>7.10.2</testng.version>
        <opencsv.version>5.10</opencsv.version>
        <asserj.version>3.27.3</asserj.version>
        <hamcrest.version>3.0</hamcrest.version>
        <lombok.version>1.18.36</lombok.version>
        <slf4j.version>2.0.16</slf4j.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>${testng.version}</version>
        </dependency>
        <dependency>
            <groupId>com.opencsv</groupId>
            <artifactId>opencsv</artifactId>
            <version>${opencsv.version}</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${asserj.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest</artifactId>
            <version>${hamcrest.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
<!--                    <suiteXmlFiles>
                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                    </suiteXmlFiles>-->
<!--                    <suiteXmlFiles>
                        <suiteXmlFile>src\test\resources\testng2.xml</suiteXmlFile>
                    </suiteXmlFiles>-->
<!--                    <includes>
                        <include>*Test.java</include>
                    </includes>-->
<!--                    <excludes>
                        <exclude></exclude>
                    </excludes>-->
                    <parallel>methods</parallel>
                    <threadCount>3</threadCount>
                </configuration>
            </plugin>
        </plugins>
    </build>
<!--    <profiles>
        <profile>
            <id>SmokeTests</id>
            <properties>
                <suiteXmlFile>src\test\resources\testng1.xml</suiteXmlFile>
            </properties>
        </profile>
        <profile>
            <id>RegressionTests</id>
            <properties>
                <suiteXmlFile>src\test\resources\testng2.xml</suiteXmlFile>
            </properties>
        </profile>
    </profiles>-->

</project>
